# vps_dispatcher

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
src/: __init__.py  dispatcher.py  main.py
src/ai/: __init__.py  provider.py
src/common/: __init__.py  api_utils.py  cli.py  logging.py  settings.py  telegram_utils.py
src/contracts/: __init__.py  ai_outputs.py  input_message.py  outbound_tasks.py  workflow_state.py
src/graphs/: form_recognition.py  orchestrator.py  tool_intake.py
src/messaging/: __init__.py  rabbit.py
src/persistence/: sqlite_store.py
src/plugins/: __init__.py  base.py  registry.py
src/plugins/clients/: sys_registry.example.py
src/plugins/clients/example_plugin/: __init__.py  plugin.py
src/plugins/clients/example_plugin/resources/: keyboard.json  keyboard_reconcile_menu.json
src/routing/: __init__.py  classifier.py
