[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "input-messages-dispatcher"
version = "0.1.0"
description = "RabbitMQ-driven input message dispatcher with LangGraph workflows and SQLite state"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.5,<10.0.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "langchain-core>=1.2.23,<2.0.0",
    "langchain-google-genai>=4.2.1,<5.0.0",
    "langgraph>=1.1.3,<2.0.0",
    "pydantic>=2.11.3,<3.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.4,<0.12.0",
]

[project.scripts]
dispatcher = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
